@@ -23,6 +23,7 @@ requires 'Error::Pure' => 0.15;
 requires 'Exporter' => 0;
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.03;
+requires 'ISO::639::3' => 0;
 requires 'List::MoreUtils' => 0;
 requires 'Readonly' => 0;
 requires 'Unicode::UTF8' => 0;
