@@ -1,0 +1,37 @@
+use strict;
+use warnings;
+
+use English;
+use Error::Pure::Utils qw(clean);
+use Test::More 'tests' => 4;
+use Test::NoWarnings;
+use Wikibase::Datatype::Utils qw(check_language);
+
+# Test.
+my $self = {
+	'key' => 'foo',
+};
+eval {
+	check_language($self, 'key');
+};
+is($EVAL_ERROR, "Language code 'foo' isn't ISO 639-1 code.\n",
+	"Language code 'foo' isn't ISO 639-1 code.");
+clean();
+
+# Test.
+$self = {
+	'key' => 'xx',
+};
+eval {
+	check_language($self, 'key');
+};
+is($EVAL_ERROR, "Language with ISO 639-1 code 'xx' doesn't exist.\n",
+	"Language with ISO 639-1 code 'xx' doesn't exist.");
+clean();
+
+# Test.
+$self = {
+	'key' => 'en',
+};
+my $ret = check_language($self, 'key');
+is($ret, undef, 'Right language is present.');
